--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>TuRiMo | Tullahan River Monitoring</title>
 
     <link rel="stylesheet" href="css/index.css" type="text/css" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+    <link href="css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
@@ -112,16 +112,16 @@
 
 
     <div class="parallax-container center valign-wrapper">
-        <div class="parallax"><img src="https://pbs.twimg.com/media/CJiV82sUsAAyCpu?format=jpg&name=medium">
-        </div>
+        <!-- <div class="parallax"><img src="https://pbs.twimg.com/media/CJiV82sUsAAyCpu?format=jpg&name=medium"> // error picture not found
+        </div> -->
 
-        <div class="container white-text">
+        <!-- <div class="container white-text"> // check nyo yung class name. Nakawhite text hahaha
             <div class="row">
                 <div class="col s12">
                     <h5>GO TO STREAM AND WATCH THE LIVE STREAM OF TULLAHAN RIVER</h5>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- Footer -->
@@ -170,8 +170,8 @@
     </script>
 
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/materialize.min.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
