--- a/public/register.html
+++ b/public/register.html
@@ -7,6 +7,7 @@
     <title> Sign Up | TuRiMo</title>
 
     <!-- CSS -->
+    <link rel="stylesheet" href="css/materialize.min.css">
     <link href="css/forms.css" rel="stylesheet">
 
 
@@ -18,11 +19,14 @@
             <form id="signup-form">
                 <h1>Sign Up</h1>
                 <input type="file" id="photo" />
+                <div class="progress">
+                    <div class="determinate" id="uploader" style="width: 0%"></div>
+                </div>
                 <input type="text" class="validate" id="firstName" placeholder="First Name">
                 <input type="text" class="validate" id="lastName" placeholder="Last Name">
                 <input id="signup-email" type="email" placeholder="Email Address" class="validate" required>
                 <input id="signup-password" type="password" placeholder="Password" class="validate" required>
-                <button onclick="uploadImage()" style="font-size: 12px;">SIGN UP</button>
+                <button style="font-size: 12px;">SIGN UP</button>
                 <h4> ALREADY A MEMBER? <a href="login.html"> Click here.</a></h4>
             </form>
         </div>
@@ -54,72 +58,59 @@
             measurementId: "G-FQ8LEKM1J2"
         };
         firebase.initializeApp(firebaseConfig);
-        console.log(firebase);
 
         const auth = firebase.auth();
         const db = firebase.firestore();
         const storage = firebase.storage();
-   
-      function uploadImage() {
-      const ref = firebase.storage().ref();
-      const file =  document.querySelector('.comment').files[0];
-      const name = +new Date() + "-" + file.name;
-      const metadata = {
-        contentType: file.type
-      };
-      const task = ref.child(name).put(file, metadata);
-      task
-        .then(snapshot => snapshot.ref.getDownloadURL())
-        .then(url => {
-          console.log(url);
-          document.querySelector('.comment').src = url;
-        })
-        .catch(console.error);
-    
-    }
-    
-      const video = document.getElementById('video');
-      const canvas = document.getElementById('canvas');
-      const snap = document.getElementById("snap");
-      const errorMsgElement = document.querySelector('span#errorMsg');
 
-     const constraints = {
-      audio: false,
-      video: {
-      width: 400, height: 400
-    }
-};
+        const video = document.getElementById('video');
+        // const canvas = document.getElementById('canvas'); // Walang element na may id na canvas
+        const snap = document.getElementById("snap");
+        const errorMsgElement = document.querySelector('span#errorMsg');
+
+        const constraints = {
+            audio: false,
+            video: {
+                width: 400,
+                height: 400
+            }
+        };
 
 
-// Success
-  function handleSuccess(stream) {
-  window.stream = stream;
-  video.srcObject = stream;
-}
+        // Success
+        function handleSuccess(stream) {
+            window.stream = stream;
+            video.srcObject = stream;
+        }
 
-// Load init
-   init();
+        // error to kase di nakikita yung canvas
 
-// Draw image
-   var context = canvas.getContext('2d');
-   snap.addEventListener("click", function() {
-    context.drawImage(video, 0, 0, 640, 480);
-    var image = new Image();
-    image.id = "pic";
-    image.src = canvas.toDataURL();
-    console.log(image.src)
-    var button = document.createElement('button')
-    button.textContent = 'Upload Image'
-    document.body.appendChild(button)
+        // var context = canvas.getContext('2d');
+        // snap.addEventListener("click", function () {
+        //     context.drawImage(video, 0, 0, 640, 480);
+        //     var image = new Image();
+        //     image.id = "pic";
+        //     image.src = canvas.toDataURL();
+        //     console.log(image.src)
+        //     var button = document.createElement('button')
+        //     button.textContent = 'Upload Image'
+        //     document.body.appendChild(button)
 
-    button.onclick = function() {
-    const ref = firebase.storage().ref();
-    ref.child(new Date() + '-' + 'base64').putString(image.src, 'data_url').then(function(snapshot) {
-    console.log('Uploaded a data_url string!');
-    alert("Image Uploaded")
-});
-}
-});
+        //     button.onclick = function () {
+        //         const ref = firebase.storage().ref();
+        //         ref.child(new Date() + '-' + 'base64').putString(image.src, 'data_url').then(function (
+        //             snapshot) {
+        //             console.log('Uploaded a data_url string!');
+        //             alert("Image Uploaded")
+        //         });
+        //     }
+        // });
+    </script>
+    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <script>
+
     </script>
 
     <script src="js/register.js" type="text/javascript"></script>
