--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,7 @@
         const database = firebase.database();
     </script>
 
+    <!-- <script type="text/javascript" src="js/moment.js"></script>> -->
     <script type="text/javascript" src="js/Chart.min.js"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/materialize.min.js"></script>
