--- a/public/stream.html
+++ b/public/stream.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/stream.css">
 </head>
 
 <body>
@@ -38,11 +38,24 @@
 
     <div class="row">
         <!-- VIDEO STREAM  -->
+        <form id="admin-form">
+            <div id="AdminDivOnly">
+                <div class="input-field col s6">
+                    <input id="urlCode" type="text" class="validate" required>
+                    <label for="urlCode">Youtube video code</label>
+                </div>
+                <button class="btn waves-effect waves-light">Submit
+                    <i class="material-icons right">send</i>
+                </button>
+            </div>
+        </form>
         <div class="col s12">
             <div class="row">
                 <div class="container">
-                    <div class="video-container"><iframe class="iv-i" style="display:block;margin:0;padding:0;border:0;" src="https://open.ivideon.com/embed/v2/?server=100-vN9SszkvRuZkPXfVkv7igV&amp;camera=0&amp;width=&amp;height=&amp;lang=en" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            width="760" height="600" frameborder="0" allowfullscreen></iframe>
+                    <div class="video-container">
+                        <iframe id="myFrame" width="560" height="315" frameborder="0"
+                            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -58,9 +71,10 @@
                         <label class="green-text" for="content">Leave a comment here...</label>
                     </div>
                     <button class="btn waves-effect green waves-light disabled" id="hide">Submit
-                    <i class="material-icons right">send</i>
-                </button>
-                    <span class="logged-out">Not Logged In.<a href="login.html"> You must be login or register.</a></span>
+                        <i class="material-icons right">send</i>
+                    </button>
+                    <span class="logged-out">Not Logged In.<a href="login.html"> You must be login or
+                            register.</a></span>
                 </div>
             </div>
         </form>
@@ -108,13 +122,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $(".sidenav").sidenav();
         });
     </script>
 
     <script src="js/index.js" type="text/javascript"></script>
-    <script src="js/comment.js" type="text/javascript"></script>
+    <script src="js/commentwithpagination.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
 
 </body>
