--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
 
     <!-- NAVIGATION BAR -->
     <nav>
-        <div class="nav-wrapper green">
+        <div class="nav-wrapper light-blue">
             <div class="container">
                 <a href="index.html" class="brand-logo">TuRiMo</a>
                 <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li class="waves-effect"><a href="stream.html">Stream</a></li>
-                    <li class="waves-effect"><a href="news.html">News</a></li>
+                    <!-- <li class="waves-effect"><a href="news.html">News</a></li> -->
                     <li class="logged-in"><a href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
@@ -32,7 +32,7 @@
     </nav>
 
     <ul class="sidenav" id="mobile-menu">
-        <li class="sidenav-header green">
+        <li class="sidenav-header light-blue">
             <div class="row">
                 <div class="col s4">
                     <img src="images/green_smile.png" width="48px" height="48px" alt="avatar" class="circle responsive-img valign profile-image">
@@ -54,15 +54,15 @@
         <div class="container">
             <div class="row">
                 <div class="col s12 white-text">
-                    <h2 class="green-text lighten-2">TULLAHAN RIVER MONITORING</h2>
+                    <h2 class=" light-blue darken-1-text">TULLAHAN RIVER MONITORING</h2>
                     <p>Get the latest news and updates about your local river.</p>
-                    <a class="waves-effect waves-light btn-large green">Get Started</a>
+                    <!-- <a class="waves-effect waves-light btn-large light-blue">Get Started</a> -->
                 </div>
             </div>
         </div>
 
         <div class="parallax">
-            <img src="images/tullahan1.jpg">
+            <img src="images/TURI.jpg">
         </div>
 
     </div>
@@ -70,42 +70,41 @@
     <div class="container">
         <div class="row">
             <p class="light left-align">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices
-                eros. Morbi sem neque, posuere et pretium eget, bibendum sollicitudin lacus. Aliquam eleifend sollicitudin diam, eu mattis nisl maximus sed. Nulla imperdiet semper molestie. Morbi massa odio, condimentum sed ipsum ac, gravida ultrices
-                erat. Nullam eget dignissim mauris, non tristique erat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
+                In recent months, floods have worsened with a series of typhoons that affected the Philippines. Whereas water level monitoring used to be done manually. Local authorities near the river must record levels of water on a fixed, or often monthly basis. The residents must wait and watch news to get updates regarding the Tullahan River. Our goal is to make TuRiMo as an easy to access river monitoring website. Users can quick check the status of the river. Aside from time-saving benefits, the TuRiMo Web App can provide even greater insights of Tullahan River.
             </p>
             <div class="col m4 s12">
                 <div class="icon-block">
-                    <h2 class="center green-text">
+                    <h2 class="center light-blue-text">
                         <i class="material-icons">flash_on</i>
                     </h2>
                     <h5 class="center">LEVEL 1</h5>
                     <p class="light">
-                        We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+                        When the water level reaches 12 inches that is equivalent to 8 feet that indicates that the water level hits LEVEL 1 -Low Risk; together with a sound alarm that has a 1-second duration and 10 seconds delay with an audio frequency of 440hz.
                     </p>
                 </div>
 
             </div>
             <div class="col m4 s12">
                 <div class="icon-block">
-                    <h2 class="center green-text">
+                    <h2 class="center light-blue-text">
                         <i class="material-icons">group</i>
                     </h2>
                     <h5 class="center">LEVEL 2</h5>
                     <p class="light">
-                        By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow
-                        for a more unified user experience.
+                        When the water level reaches 8 inches that is equivalent to 5 feet that indicates that the water level hits LEVEL 2 - Moderate Risk; together with a sound alarm that has a 5-second duration and 10 seconds delay with a frequency of 620hz.
+
                     </p>
                 </div>
             </div>
             <div class="col m4 s12">
                 <div class="icon-block">
-                    <h2 class="center green-text">
+                    <h2 class="center light-blue-text">
                         <i class="material-icons">settings</i>
                     </h2>
                     <h5 class="center">LEVEL 3</h5>
                     <p class="light">
-                        We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.
+                        When the water level reaches 4 inches that is equivalent to 3 feet that indicates that the water level hits hits LEVEL 3 - High Risk; together with a sound alarm that has a quick whooping sound with a frequency of 440hz.
+
                     </p>
                 </div>
             </div>
@@ -125,7 +124,7 @@
 
 
     <!-- Footer -->
-    <footer class="page-footer green">
+    <footer class="page-footer light-blue">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
