--- a/public/stream.html
+++ b/public/stream.html
@@ -14,14 +14,14 @@
 <body>
     <!-- NAVIGATION BAR -->
     <nav>
-        <div class="nav-wrapper green">
+        <div class="nav-wrapper light-blue">
             <div class="container">
                 <a href="index.html" class="brand-logo">Tullahan River Monitoring</a>
                 <a href="#" data-target="mobile-menu" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li class="waves-effect"><a href="index.html">Home</a></li>
                     <li class="active"><a href="stream.html">Stream</a></li>
-                    <li class="waves-effect"><a href="news.html">News</a></li>
+                    <!-- <li class="waves-effect"><a href="news.html">News</a></li> -->
                     <li class="logged-in"><a class="waves-effect" href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
@@ -44,7 +44,7 @@
                     <input id="urlCode" type="text" class="validate" required>
                     <label for="urlCode">Youtube video code</label>
                 </div>
-                <button class="btn waves-effect waves-light">Submit
+                <button class="btn waves-effect waves-light light-blue">Submit
                     <i class="material-icons right">send</i>
                 </button>
             </div>
@@ -66,9 +66,9 @@
             <div class="row">
                 <div class="container">
                     <div class="input-field col s12">
-                        <i class="material-icons prefix green-text">insert_comment</i>
+                        <i class="material-icons prefix light-blue-text">insert_comment</i>
                         <textarea id="content" class="materialize-textarea" required></textarea>
-                        <label class="green-text" for="content">Leave a comment here...</label>
+                        <label class=light-blue-text for="content">Leave a comment here...</label>
                     </div>
                     <button class="btn waves-effect green waves-light disabled" id="hide">Submit
                         <i class="material-icons right">send</i>
