done lazy loading yey

--- a/public/stream.html
+++ b/public/stream.html
@@ -82,13 +82,13 @@
     </div>
 
     <!-- COMMENT SECTION -->
-    <ul class="collection comment ">
+    <ul class="collection comment">
 
     </ul>
 
     <!-- PAGINATION -->
-    <div class="nextPage">
-        <button class="center-align">See More...</button>
+    <div class="nextPage center">
+        <a class="waves-effect waves-light btn"><i class="material-icons left">visibility</i>See more..</a>
     </div>
 
 
