deploy json api

--- a/public/stream.html
+++ b/public/stream.html
@@ -21,7 +21,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li class="waves-effect"><a href="index.html">Home</a></li>
                     <li class="active"><a href="stream.html">Stream</a></li>
-                    <!-- <li class="waves-effect"><a href="news.html">News</a></li> -->
+                    <li class="waves-effect"><a href="news.html">News</a></li>
                     <li class="logged-in"><a class="waves-effect" href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
