--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li class="waves-effect"><a href="stream.html">Stream</a></li>
-                    <!-- <li class="waves-effect"><a href="news.html">News</a></li> -->
+                    <li class="waves-effect"><a href="news.html">News</a></li>
                     <li class="logged-in"><a href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
