--- a/public/news.html
+++ b/public/news.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/index.css" type="text/css" />
     <link href="css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/chart.css">
-
+    <link rel="stylesheet" href="css/news.css">
 </head>
 
 <body>
@@ -24,7 +23,7 @@
                 <ul class="right hide-on-med-and-down">
                     <li class="active"><a href="index.html">Home</a></li>
                     <li class="waves-effect"><a href="stream.html">Stream</a></li>
-                    <!-- <li class="waves-effect"><a href="news.html">News</a></li> -->
+                    <li class="waves-effect"><a href="news.html">News</a></li>
                     <li class="logged-in"><a href="#!" id="signout">Sign out</a></li>
                 </ul>
             </div>
@@ -35,7 +34,8 @@
         <li class="sidenav-header light-blue">
             <div class="row">
                 <div class="col s4">
-                    <img src="images/green_smile.png" width="48px" height="48px" alt="avatar" class="circle responsive-img valign profile-image">
+                    <img src="images/green_smile.png" width="48px" height="48px" alt="avatar"
+                        class="circle responsive-img valign profile-image">
                 </div>
                 <div class="col s8">
                     <a class="btn-flat dropdown-button waves-effect waves-light white-text" href="#">MY NAME<i
@@ -50,24 +50,12 @@
     </ul>
 
     <!-- Content -->
-    <div class="parallax-container center valign-wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 white-text">
-                    <h2 class=" light-blue darken-1-text">TULLAHAN RIVER MONITORING</h2>
-                    <p>Get the latest news and updates about your local river.</p>
-                    <!-- <a class="waves-effect waves-light btn-large light-blue">Get Started</a> -->
-                </div>
-            </div>
+    <div class="container">
+        <div class="row newsRow">
+            
         </div>
-
-        <div class="parallax">
-            <img src="images/TURI.jpg">
-        </div>
-
     </div>
 
-    
 
 
     <!-- Footer -->
@@ -77,7 +65,8 @@
                 <div class="col l6 s12">
                     <h5 class="white-text">Team 8</h5>
                     <p class="grey-text text-lighten-4">
-                        We are a team of college students; Kiara Nicole R. Baliwagan, Jeraldine B. Cagatin, Analou A. Edma, Daniella S. Sevial
+                        We are a team of college students; Kiara Nicole R. Baliwagan, Jeraldine B. Cagatin, Analou A.
+                        Edma, Daniella S. Sevial
                         <p> A web app project in COEN3463.</p>
                     </p>
                 </div>
@@ -124,16 +113,18 @@
     <script src="js/materialize.min.js"></script>
 
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $(".sidenav").sidenav();
         });
 
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('.parallax').parallax();
         });
     </script>
 
     <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/news.js" type="text/javascript"></script>
     <script src="js/signout.js" type="text/javascript"></script>
 </body>
+
 </html>
