--- a/public/stream.html
+++ b/public/stream.html
@@ -71,7 +71,7 @@
                         <textarea id="content" class="materialize-textarea" required></textarea>
                         <label class=light-blue-text for="content">Leave a comment here...</label>
                     </div>
-                    <button class="btn waves-effect green waves-light disabled" id="hide">Submit
+                    <button class="btn waves-effect green waves-light" id="hide">Submit
                         <i class="material-icons right">send</i>
                     </button>
                     <span class="logged-out">Not Logged In.<a href="login.html"> You must be login or
@@ -133,5 +133,4 @@
     <script src="js/signout.js" type="text/javascript"></script>
 
 </body>
-
 </html>
